# co2ppm

./: .gitignore  CMakeLists.txt  README.md  REUSE.toml  partitions.csv  sdkconfig.defaults
.github/workflows/: ci.yml
main/: CMakeLists.txt  Kconfig.projbuild  captive_dns.c  captive_dns.h  main.c  metrics_server.c  metrics_server.h  ota.c  ota.h  reset_button.c  reset_button.h  status_led.c  status_led.h  wifi.c  wifi.h  zyaura.c  zyaura.h
scripts/: init.sh
